fix release block overflow when shrinking screen

--- a/index.css
+++ b/index.css
@@ -64,6 +64,7 @@ p {
 
 .mb0 {
   margin-bottom: 0;
+  width:58%;
 }
 
 /******** Grid  *********/
